@@ -1,3 +1,7 @@
+2002-01-23  Werner Koch  <wk@gnupg.org>
+
+	* cert-basic.c (one_file): Print key usage restrictions
+
 2002-01-22  Werner Koch  <wk@gnupg.org>
 
 	* cert-basic.c (list_extensions): New.
